--- a/package.json
+++ b/package.json
@@ -33,20 +33,21 @@
   "typings": "./bundles/src/index.d.ts",
   "repository": "oferh/ng2-completer",
   "dependencies": {
-    "@angular/common": "^2.2.2",
-    "@angular/compiler": "^2.2.2",
-    "@angular/core": "^2.2.2",
-    "@angular/forms": "^2.2.2",
-    "@angular/platform-browser": "^2.2.2",
-    "@angular/platform-browser-dynamic": "^2.2.2",
-    "rxjs": "5.0.0-beta.12"
+    "@angular/common": "^2.2.4",
+    "@angular/compiler": "^2.2.4",
+    "@angular/core": "^2.2.4",
+    "@angular/forms": "^2.2.4",
+    "@angular/platform-browser": "^2.2.4",
+    "@angular/platform-browser-dynamic": "^2.2.4",
+    "ncp": "^2.0.0",
+    "rxjs": "5.0.0-rc.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.2.2",
-    "@angular/http": "^2.2.2",
+    "@angular/compiler-cli": "^2.2.4",
+    "@angular/http": "^2.2.4",
     "@angular/material": "^2.0.0-alpha.10",
-    "@angular/platform-server": "^2.2.2",
-    "@angular/router": "^3.2.2",
+    "@angular/platform-server": "^2.2.4",
+    "@angular/router": "^3.2.4",
     "@types/node": "^6.0.50",
     "@types/webpack": "^2.0.0",
     "angular2-template-loader": "^0.6.0",
@@ -76,6 +77,6 @@
     "webpack": "^2.1.0-beta.27",
     "webpack-dev-server": "^2.1.0-beta.11",
     "webpack-node-externals": "^1.5.4",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.7.2"
   }
 }
